5-traffic-intercept/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
 name: network-tool
spec:
 containers:
   - name: network-tool
     image: zhaohuabing/network-tool
     securityContext:
       capabilities:
         add:
           - NET_ADMIN
